feat: P4ADEV-4347 [Design Review] remittance information management - API getDebtPositionDetail (#364)